<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFDE03"
    android:orientation="vertical"
    tools:context=".Myprofile">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        app:srcCompat="@drawable/profilepic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/name"
        android:textSize="24dp" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="24dp"
        android:background="#000" />

    <TextView
        android:id="@+id/textView3"
        style="@style/margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/track" />

    <TextView
        android:id="@+id/textView4"
        style="@style/margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country" />

    <TextView
        android:id="@+id/textView5"
        style="@style/margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mail" />

    <TextView
        android:id="@+id/textView6"
        style="@style/margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number" />

    <TextView
        android:id="@+id/textView7"
        style="@style/margins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slack" />

</LinearLayout>